  completely decoupled from the code as such that it can be registered by the 
  application/app using the core library. Other major changes have been made to 
  significantly reduce the references to the AWT and Swing libraries (GUI) from the 
  Data Crow core library.
- The module wizard now allows you to create references to the same module multiple
  times.

[To Do]
- Create a DMG file (code signed) for MacOS users (severely lacking at this moment, 
  Data Crow can only be run from the terminal at this moment).
- Add translations for comic book module
- Adjust settings for the comic book module.


-----------------------------------------------------------------------------------------
Data Crow version 4.8.1                                            Released on 2023-03-28
-----------------------------------------------------------------------------------------
With version 4.8.0 I mistakingly made a structure change to the states for the various
modules. This fix reverts back that change after which you'll have all the features of
version 4.8.0 without having to deal with this pesky issue.
Luckily a user quickly notified me allowing me to fix this issue swiftly. Not many of
you will have had the version 4.8 installed but I thought it to be better to create this
release rather than trying to retract version 4.8 and re-release it.

[Fixed]
- Missing states in drop downs in various modules after upgrading to version 4.8.0.


-----------------------------------------------------------------------------------------
Data Crow version 4.8.0                                            Released on 2023-03-28
-----------------------------------------------------------------------------------------
With each release there's more available in Data Crow. This time there's a completely
new module; Board Games. It includes online search support using the magnificent site
BoardGamesAtlas.com. On the Movie front a new online search has been added; MovieMeter.nl