@@ -1038,15 +1038,6 @@ public class DcApplicationSettings extends Settings {
                             false, -1));
         addSetting(_General,
                 new Setting(DcRepository.ValueTypes._BOOLEAN,
-                            DcRepository.Settings.stDeleteImageFileAfterImport,
-                            Boolean.FALSE,
-                            UIComponents._CHECKBOX,
-                            "tpDeleteImageFile",
-                            "lblDeleteImageFile",
-                            false,
-                            true, -1));
-        addSetting(_General,
-                new Setting(DcRepository.ValueTypes._BOOLEAN,
                             DcRepository.Settings.stCheckForNewVersion,
                             Boolean.TRUE,
                             UIComponents._CHECKBOX,
@@ -1178,15 +1169,6 @@ public class DcApplicationSettings extends Settings {
                 new Setting(DcRepository.ValueTypes._DIMENSION,
                             DcRepository.Settings.stGroupByDialogSize,
                             new DcDimension(300, 200),
-                            -1,
-                            "",
-                            "",
-                            false,
-                            false, -1));
-        addSetting(_General,
-                new Setting(DcRepository.ValueTypes._STRING,
-                            DcRepository.Settings.stReportFile,
-                            "",
                             -1,
                             "",
                             "",
