@@ -421,9 +421,6 @@ lblSaveAs = Save as
 lblCut = Cut
 lblDiscXofX = disc %1 of %2
 lblPerformanceTweaking = Performance Tweaking
-lblGarbageCollectionInterval = Garbage Collection interval (MS)
-lblHsqlCacheScale = HSQL Database cache scale
-lblHsqlCacheSizeScale = HSQL Database cache size scale
 lblStorageMedium = Storage Medium
 lblSearch = Search
 lblItemForm = Item Form
@@ -497,7 +494,6 @@ lblFileExtension = File Extension
 lblProgram = Program
 lblAdd = Add
 lblStartProgram = Launch File
-lblDeleteImageFile = Delete picture file after adding it to an item
 lblRatingOutOf = / 10
 lblRatingNotRated = not yet rated
 lblToggleQuickView = Toggle Quick View
