@@ -81,13 +81,9 @@ tpCreateModuleWizard = Starts the wizard to create a new custom module.
 tpRelateModuleWizard = Starts the wizard to create a parent - child relation between two modules.
 tpOnlineSearchSubItems = Searches online for persons and companies. Retrieves images and additional information. If disabled, the person or company is created without this additional information. This information can be added in a later stage.  
 tpAutoAddPerfectMatch = Automatically adds or updates an item if the match is perfect, saving you the hassle of clicking..
-tpHsqlCacheScale = From the HSQL Documentation: Indicates the maximum number of rows of cached tables that are held in memory, calculated as 3 *(2**value) (three multiplied by (two to the power value)). The default results in up to 3*16384 rows from all cached tables being held in memory at any time.
-tpHsqlCacheSizeScale = From the HSQL Documentation: Indicates the average size of each row in the memory cache used with cached tables, calculated as 2**value (two to the power value). This result value is multiplied by the maximum number of rows defined by hsqldb.cache_scale to form the maximum number of bytes for all the rows in memory cache. The default results in 1024 bytes per row. This default, combined with the default number of rows, results in approximately 50MB of the .data file to be stored in the memory cache
-tpGarbageCollectionIntervalMs = Indicates at which time interval (in milliseconds) Data Crow tries to free up memory
 tpBackup = Select a target directory where the backup can be created. The database and the settings will be added to this backup
 tpRestore = Select a backup file to restore (.bck)
 tpProgramDefinitions = Define programs to handle specific file types (based on its extension)
-tpDeleteImageFile = Deletes picture source after it has been added to the item form (via the picture viewer)
 tpProxyPassword = Leave blank if authentication is not required
 tpProxyUserName = Leave blank if authentication is not required
 tpCompactAndShutdown = Compacts the database. The application will shutdown after the database has been optimized.
